[gd_scene load_steps=23 format=2]

[ext_resource path="res://characters/enemies/final_boss/giga-omi/assets/omi-and-gigaomi-sheet.png" type="Texture" id=1]
[ext_resource path="res://characters/enemies/final_boss/giga-omi/scripts/MiniOmi.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackArea/AttackCollision:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PlayerDetectionArea/PlayerDetectionCollision:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
resource_name = "tlo_attack"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.226381, 0.247772, 0.807487, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 136, 137, 138, 139, 140, 141, 142, 143 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackArea/AttackCollision:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("PlayerDetectionArea/PlayerDetectionCollision:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=17]
resource_name = "tlo_idle"
length = 0.4
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 72, 73, 72 ]
}

[sub_resource type="Animation" id=9]
resource_name = "tlo_run"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 96, 97, 98, 99, 100, 101, 102, 103 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerDetectionArea/PlayerDetectionCollision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackArea/AttackCollision:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "tlo_vanish_in"
length = 0.65
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 125, 123, 122, 121, 120 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.226381, 0.247772, 0.807487, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackArea/AttackCollision:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PlayerDetectionArea/PlayerDetectionCollision:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=4]
resource_name = "tlo_vanish_out"
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 120, 121, 122, 123, 125 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.226381, 0.247772, 0.807487, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AttackArea/AttackCollision:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("PlayerDetectionArea/PlayerDetectionCollision:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "tlo_attack"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "tlo_idle"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "tlo_run"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "tlo_vanish_in"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "tlo_vanish_out"

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=19]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=5]
states/tlo_attack/node = SubResource( 10 )
states/tlo_attack/position = Vector2( 302, 233 )
states/tlo_idle/node = SubResource( 18 )
states/tlo_idle/position = Vector2( 524, 233 )
states/tlo_run/node = SubResource( 11 )
states/tlo_run/position = Vector2( 302, 132 )
states/tlo_vanish_in/node = SubResource( 12 )
states/tlo_vanish_in/position = Vector2( 524, 85 )
states/tlo_vanish_out/node = SubResource( 13 )
states/tlo_vanish_out/position = Vector2( 524, 342 )
transitions = [ "tlo_run", "tlo_attack", SubResource( 15 ), "tlo_attack", "tlo_vanish_out", SubResource( 16 ), "tlo_vanish_in", "tlo_idle", SubResource( 19 ), "tlo_idle", "tlo_run", SubResource( 20 ), "tlo_vanish_out", "tlo_idle", SubResource( 21 ) ]
start_node = "tlo_vanish_in"
graph_offset = Vector2( -67, 89 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=6]

[sub_resource type="CapsuleShape2D" id=7]
radius = 6.0
height = 16.0

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 5.5, 14 )

[node name="MiniOmi" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
collision_layer = 8
collision_mask = 81
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 0, 0.858824, 1, 1 )
texture = ExtResource( 1 )
hframes = 8
vframes = 18

[node name="Animation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/tlo_attack = SubResource( 2 )
anims/tlo_idle = SubResource( 17 )
anims/tlo_run = SubResource( 9 )
anims/tlo_vanish_in = SubResource( 3 )
anims/tlo_vanish_out = SubResource( 4 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 5 )
anim_player = NodePath("../Animation")
parameters/playback = SubResource( 6 )

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 7 )

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 20

[node name="AttackCollision" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( 11.5, 0 )
shape = SubResource( 8 )
disabled = true

[node name="PlayerDetectionArea" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 4

[node name="PlayerDetectionCollision" type="CollisionShape2D" parent="PlayerDetectionArea"]
position = Vector2( 11.5, 0 )
shape = SubResource( 8 )
disabled = true

[node name="Raycasts" type="Node2D" parent="."]

[node name="PlayerOnBackRaycast" type="RayCast2D" parent="Raycasts"]
enabled = true
cast_to = Vector2( -50, 0 )
collision_mask = 4

[node name="FloorRaycast" type="RayCast2D" parent="Raycasts"]
position = Vector2( 6, 5.5 )
enabled = true
cast_to = Vector2( 0, 12 )

[connection signal="animation_finished" from="Animation" to="." method="_on_Animation_animation_finished"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="body_entered" from="PlayerDetectionArea" to="." method="_on_PlayerDetectionArea_body_entered"]
